@@ -12,6 +12,7 @@ Now
  * Remove check for equality in mutation and crossover because it can break good ADF.
  * Fix DIR_DIFF status calculating.
  * Fix evalation at end of circles.
+ * Use elitism and tournament selection.
 
 Version 0.0.0.8 2010-12-05
  * Add support for current state.
